--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -19,7 +19,9 @@
       "template_folder": "_themes"
     }
   ],
-  "notification_subscribers": [],
+  "notification_subscribers": [
+    "ychenu@microsoft.com"
+  ],
   "branches_to_filter": [],
   "continue_with_document_error": true,
   "skip_source_output_uploading": false,
@@ -40,5 +42,6 @@
       }
     }
   ],
+  "branch_target_mapping": {},
   "need_generate_pdf_url_template": false
 }
