--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -9,6 +9,7 @@
       "build_output_subfolder": "TestLogCode",
       "locale": "ja-jp",
       "monikers": [],
+      "moniker_ranges": [],
       "open_to_public_contributors": false,
       "type_mapping": {
         "Conceptual": "Content",
